# ZephyrRTOS

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  CMakeLists.txt  README.md  TODO.md  environment.yml  requirements.txt  state_diagram.puml
application/: CMakeLists.txt  prj.conf
application/boards/: nrf52833dk_nrf52833.overlay
application/src/: ble-lib.c  ble-lib.h  calc_freq.c  calc_freq.h  main.c
boards/: nrf52833dk_nrf52833.overlay
docs/: sequence_diagram.puml  state_diagram.puml
testing/: adc_alias.txt  adc_async_alias.txt  adc_async_nominal.txt  adc_nominal.txt  kernel_1Hz.txt  kernel_5Hz.txt  kernel_events_validation.ipynb  log_1Hz.txt  log_2Hz.txt  log_5Hz.txt  scope.CSV  scope_async.csv  single_sample.txt  technical_report.ipynb  testing_adc_async.ipynb  testing_adc_single_sample.ipynb  testing_adc_sync.ipynb  thread_2Hz_HB.txt  thread_testing.ipynb  timer_testing.ipynb
testing/SS_data/: scope_0.csv  scope_1.csv  scope_12.csv  scope_15.csv  scope_16.csv  scope_19.csv  scope_20.csv  scope_7.csv  scope_8.csv  scope_9.csv
testing/exp1_data/: TEK0000.CSV  TEK0001.CSV  TEK0002.CSV  TEK0003.CSV  TEK0004.CSV  TEK0005.CSV  TEK0006.CSV  TEK0007.CSV  TEK0008.CSV  TEK0009.CSV  TEK0010.CSV  TEK0011.CSV  TEK0018.CSV  TEK0019.CSV  TEK0020.CSV  TEK0021.CSV  TEK0022.CSV  TEK0023.CSV  TEK0024.CSV  TEK0025.CSV  TEK0026.CSV
testing/pwm/: scope_10.csv  scope_11.csv  scope_13.csv  scope_14.csv  scope_17.csv  scope_18.csv  scope_2.csv  scope_3.csv  scope_4.csv  scope_5.csv  scope_6.csv  testing_pwm.ipynb
